Finalizando funcionalidades de exclusao e edição de vagas e empresas; criada camada de DTO na camada de modelo; ajustes de BP no nome das classes

--- a/web/view/menu.phtml
+++ b/web/view/menu.phtml
@@ -8,15 +8,16 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto ">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 active" aria-current="page" href="home.php">Home</a>
+                    <a class="nav-link mx-2 active" aria-current="page" href="../home.php">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Empresa
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="editar_empresa.php">Editar</a></li>
-                        <li><a class="dropdown-item" href="remover_empresa.php">Excluir conta</a></li>
+                        <li><a class="dropdown-item" href="../editar_empresa.php">Editar</a></li>
+                        <li><a class="dropdown-item" href="../trocar_senha.php">Trocar a senha</a></li>
+                        <li><a class="dropdown-item" href="../excluir_empresa.php">Excluir conta</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -24,11 +25,11 @@
                         Vagas
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="cadastrar_vaga.php">Cadastrar</a></li>
+                        <li><a class="dropdown-item" href="../cadastrar_vaga.php">Cadastrar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" aria-current="page" href="logout.php">Sair</a>
+                    <a class="nav-link mx-2" aria-current="page" href="../logout.php">Sair</a>
                 </li>
             </ul>
         </div>
