Ajuste da index.php para camada de visualização

--- a/web/view/cadastrar_empresa.phtml
+++ b/web/view/cadastrar_empresa.phtml
@@ -75,7 +75,7 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    Já possui cadastro? <a href="login.php" class="link-secondary text-decoration-none">Faça o login</a>
+                                    Já possui cadastro? <a href="../index.php" class="link-secondary text-decoration-none">Faça o login</a>
                                 </div>
                             </div>
                         </div>
