--- a/web/view/menu.phtml
+++ b/web/view/menu.phtml
@@ -29,7 +29,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" aria-current="page" href="../logout.php">Sair</a>
+                    <a class="nav-link mx-2" aria-current="page" href="../processa_logout.php">Sair</a>
                 </li>
             </ul>
         </div>
