Implementação de Usuario

--- a/web/view/cadastrar_empresa.phtml
+++ b/web/view/cadastrar_empresa.phtml
@@ -40,18 +40,12 @@
                                     <label for="cnpj" class="form-label">CNPJ <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" name="cnpj" id="cnpj" placeholder="CNPJ" required>
                                 </div>
-                                <div class="col-12">
-                                    <label for="usuario" class="form-label">Usuário <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Informe seu usuário de acesso" required>
-                                </div>
+
                                 <div class="col-12">
                                     <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
                                     <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required>
                                 </div>
-                                <div class="col-12">
-                                    <label for="senha" class="form-label">Senha <span class="text-danger">*</span></label>
-                                    <input type="password" class="form-control" name="senha" id="senha" value="" required>
-                                </div>
+
                                 <div class="col-12">
                                     <label for="descricao" class="form-label">Descrição <span class="text-danger">*</span></label>
                                     <textarea type="text" class="form-control" name="descricao" id="descricao" placeholder="Descrição" required></textarea>
@@ -63,6 +57,24 @@
                                 <div class="col-12">
                                     <label for="endereco" class="form-label">Endereço <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" name="endereco" id="endereco" placeholder="Digite o Endereço Atual" required>
+                                </div>
+                                <hr>
+                                <h6>Dados do usuário</h6>
+                                <div class="col-12">
+                                    <label for="usuarioCpf" class="form-label">CPF <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
+                                </div>
+                                <div class="col-12">
+                                    <label for="usuarioNome" class="form-label">Nome <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuario" required>
+                                </div>
+                                <div class="col-12">
+                                    <label for="usuarioEmail" class="form-label">Email <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuario" required>
+                                </div>
+                                <div class="col-12">
+                                    <label for="usuarioSenha" class="form-label">Senha <span class="text-danger">*</span></label>
+                                    <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required>
                                 </div>
                                 <div class="col-12">
                                     <div class="d-grid">
