--- a/web/view/login.html
+++ b/web/view/login.html
@@ -34,9 +34,9 @@
                         <form action="../processa_login.php" method="post">
                             <div class="row gy-3 gy-md-4 overflow-hidden">
                                 <div class="col-12">
-                                    <label for="usuario" class="form-label">Usuário
+                                    <label for="email" class="form-label">Email
                                         <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Informe seu usuário de acesso" required>
+                                    <input type="text" class="form-control" name="email" id="email" placeholder="Informe seu e-mail de acesso" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="senha" class="form-label">Senha
