--- a/web/view/menu.phtml
+++ b/web/view/menu.phtml
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><?= $empresa->getNome() ?></a>
+        <a class="navbar-brand" href="#"><?= $empresa->getNome() ?> | <?= $usuario->getNome(); ?></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,9 +15,23 @@
                         Empresa
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="../editar_empresa.php">Editar</a></li>
-                        <li><a class="dropdown-item" href="../trocar_senha.php">Trocar a senha</a></li>
-                        <li><a class="dropdown-item" href="../excluir_empresa.php">Excluir conta</a></li>
+                        <li>
+                            <a class="dropdown-item" href="../editar_empresa.php">Editar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="../excluir_empresa.php">Excluir conta</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Usuários
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="../cadastrar_usuario.php">Cadastrar</a>
+                            <a class="dropdown-item" href="../listar_usuarios.php">Listar</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -25,12 +39,28 @@
                         Vagas
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="../cadastrar_vaga.php">Cadastrar</a></li>
+                        <li>
+                            <a class="dropdown-item" href="../cadastrar_vaga.php">Cadastrar</a>
+                        </li>
                     </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2" aria-current="page" href="../processa_logout.php">Sair</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Minha conta
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="../editar_usuario.php?id=<?=$_SESSION['usuarioId']?>">Editar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="../trocar_senha.php">Trocar a senha</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="../processa_logout.php">Sair</a>
+                        </li>
+                    </ul>
                 </li>
+
             </ul>
         </div>
     </div>
