Implementação do MVC

--- a/web/view/cadastrar_usuario.phtml
+++ b/web/view/cadastrar_usuario.phtml
@@ -9,7 +9,7 @@
 <body>
 <?php include_once 'menu.phtml' ?>
 <div class="container mt-2">
-    <form method="post" action="../processa_cadastrar_usuario.php">
+    <form method="post" action="../index.php?controller=Usuario&action=processaCadastrar">
         <div class="row g-3 align-items-center mb-2">
             <label for="cpf" class="col-form-label col-md-2">CPF</label>
             <div class="col-md-10">
