--- a/web/view/cadastrar_vaga.phtml
+++ b/web/view/cadastrar_vaga.phtml
@@ -9,7 +9,7 @@
 <body>
 <?php include_once 'menu.phtml' ?>
 <div class="container mt-2">
-    <form method="post" action="../processa_cadastrar_vaga.php">
+    <form method="post" action="../index.php?controller=Vaga&action=processaCadastrar">
         <div class="row g-3 align-items-center mb-2">
             <label for="titulo" class="col-form-label col-md-2">Título</label>
             <div class="col-md-10">
