--- a/web/view/excluir_empresa.phtml
+++ b/web/view/excluir_empresa.phtml
@@ -13,8 +13,8 @@
         ATENÇÃO!<br>
         Deseja realmente excluir a conta de sua empresa e todas as vagas associadas?
         <br>
-        <a class="btn btn-danger" href="../processa_excluir_empresa.php">Sim, quero excluir</a>
-        <a class="btn btn-secondary" href="../home.php">Cancelar</a>
+        <a class="btn btn-danger" href="../index.php?controller=Empresa&action=processaExcluir">Sim, quero excluir</a>
+        <a class="btn btn-secondary" href="../index.php?controller=Vaga&action=listar">Cancelar</a>
     </div>
 </div>
 
