--- a/web/view/login.html
+++ b/web/view/login.html
@@ -31,7 +31,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="../processa_login.php" method="post">
+                        <form action="../index.php?controller=Autenticacao&action=processaLogin" method="post">
                             <div class="row gy-3 gy-md-4 overflow-hidden">
                                 <div class="col-12">
                                     <label for="email" class="form-label">Email
@@ -62,7 +62,7 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    <a href="../cadastrar_empresa.php" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
+                                    <a href="../index.php?controller=Empresa&action=cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
                                     <a href="../esqueci_senha.php" class="link-secondary text-decoration-none">Esqueci minha senha</a>
                                 </div>
                             </div>
