--- a/web/view/cadastrar_empresa.phtml
+++ b/web/view/cadastrar_empresa.phtml
@@ -30,7 +30,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="../processa_cadastrar_empresa.php" method="post">
+                        <form action="../index.php?controller=Empresa&action=processaCadastrar" method="post">
                             <div class="row gy-3 gy-md-4 overflow-hidden">
                                 <div class="col-12">
                                     <label for="nome" class="form-label">Nome da empresa <span class="text-danger">*</span></label>
@@ -87,7 +87,7 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    Já possui cadastro? <a href="../index.php" class="link-secondary text-decoration-none">Faça o login</a>
+                                    Já possui cadastro? <a href="../index.php?controller=Autenticacao&action=login" class="link-secondary text-decoration-none">Faça o login</a>
                                 </div>
                             </div>
                         </div>
