--- a/web/view/editar_usuario.phtml
+++ b/web/view/editar_usuario.phtml
@@ -9,7 +9,7 @@
 <body>
 <?php include_once 'menu.phtml' ?>
 <div class="container mt-2">
-    <form method="post" action="../processa_editar_usuario.php">
+    <form method="post" action="../index.php?controller=Usuario&action=processaEditar">
         <input type="hidden" name="usuarioId" value="<?=$usuarioEdicao->getId()?>" />
         <div class="row g-3 align-items-center mb-2">
             <label for="cpf" class="col-form-label col-md-2">CPF</label>
