--- a/web/view/editar_vaga.phtml
+++ b/web/view/editar_vaga.phtml
@@ -9,7 +9,7 @@
 <body>
 <?php include_once 'menu.phtml' ?>
 <div class="container mt-2">
-    <form method="post" action="../processa_editar_vaga.php">
+    <form method="post" action="../index.php?controller=Vaga&action=processaEditar">
         <input type="hidden" name="vagaId" value="<?=$vaga->getId()?>" />
         <div class="row g-3 align-items-center mb-2">
             <label for="titulo" class="col-form-label col-md-2">Título</label>
