--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -1,10 +1,10 @@
-
 <html lang="pt_BR">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mais1Code - Projeto</title>
-    <?php require_once 'view/include.html' ?>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-4/assets/css/login-4.css">
     <style>
         body {
@@ -31,7 +31,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="../index.php?controller=Autenticacao&action=processaLogin" method="post">
+                        <form action="/autenticacao/processaLogin" method="post">
                             <div class="row gy-3 gy-md-4 overflow-hidden">
                                 <div class="col-12">
                                     <label for="email" class="form-label">Email
@@ -62,8 +62,8 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    <a href="../index.php?controller=Empresa&action=cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
-                                    <a href="../esqueci_senha.php" class="link-secondary text-decoration-none">Esqueci minha senha</a>
+                                    <a href="/empresa/cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
+                                    <a href="/esqueci_senha.php" class="link-secondary text-decoration-none">Esqueci minha senha</a>
                                 </div>
                             </div>
                         </div>
