--- a/web/views/empresa/cadastrar.phtml
+++ b/web/views/empresa/cadastrar.phtml
@@ -3,7 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mais1Code - Projeto</title>
-    <?php require_once 'include.html' ?>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-4/assets/css/login-4.css">
     <style>
         body {
@@ -30,7 +31,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="../index.php?controller=Empresa&action=processaCadastrar" method="post">
+                        <form action="/empresa/processaCadastrar" method="post">
                             <div class="row gy-3 gy-md-4 overflow-hidden">
                                 <div class="col-12">
                                     <label for="nome" class="form-label">Nome da empresa <span class="text-danger">*</span></label>
@@ -87,7 +88,7 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    Já possui cadastro? <a href="../index.php?controller=Autenticacao&action=login" class="link-secondary text-decoration-none">Faça o login</a>
+                                    Já possui cadastro? <a href="/autenticacao/login" class="link-secondary text-decoration-none">Faça o login</a>
                                 </div>
                             </div>
                         </div>
