--- a/web/views/sistema/cabecalho.phtml
+++ b/web/views/sistema/cabecalho.phtml
@@ -1,3 +1,13 @@
+<html lang="pt_BR">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mais1Code - Projeto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><?= $usuario->getEmpresa()->getNome() ?> | <?= $usuario->getNome(); ?></a>
@@ -8,7 +18,7 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto ">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 active" aria-current="page" href="../index.php?controller=Vaga&action=listar">Home</a>
+                    <a class="nav-link mx-2 active" aria-current="page" href="/vaga/listar">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -16,10 +26,10 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Empresa&action=editar">Editar</a>
+                            <a class="dropdown-item" href="/empresa/editar">Editar</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Empresa&action=excluir">Excluir conta</a>
+                            <a class="dropdown-item" href="/empresa/excluir">Excluir conta</a>
                         </li>
                     </ul>
                 </li>
@@ -29,8 +39,8 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Usuario&action=cadastrar">Cadastrar</a>
-                            <a class="dropdown-item" href="../index.php?controller=Usuario&action=listar">Listar</a>
+                            <a class="dropdown-item" href="/usuario/cadastrar">Cadastrar</a>
+                            <a class="dropdown-item" href="/usuario/listar">Listar</a>
                         </li>
                     </ul>
                 </li>
@@ -40,7 +50,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Vaga&action=cadastrar">Cadastrar</a>
+                            <a class="dropdown-item" href="/vaga/cadastrar">Cadastrar</a>
                         </li>
                     </ul>
                 </li>
@@ -50,13 +60,13 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Usuario&action=editar&id=<?=$_SESSION['usuarioId']?>">Editar</a>
+                            <a class="dropdown-item" href="/usuario/editar?id=<?=$_SESSION['usuarioId']?>">Editar</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="../trocar_senha.php">Trocar a senha</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../index.php?controller=Autenticacao&action=processaLogout">Sair</a>
+                            <a class="dropdown-item" href="/autenticacao/processaLogout">Sair</a>
                         </li>
                     </ul>
                 </li>
@@ -65,3 +75,4 @@
         </div>
     </div>
 </nav>
+<div class="container mt-2">
