Criação do controller de erro

--- a/web/views/sistema/cabecalho.phtml
+++ b/web/views/sistema/cabecalho.phtml
@@ -63,7 +63,7 @@
                             <a class="dropdown-item" href="/usuario/editar?id=<?=$_SESSION['usuarioId']?>">Editar</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../trocar_senha.php">Trocar a senha</a>
+                            <a class="dropdown-item" href="/usuario/trocarSenha">Trocar a senha</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/autenticacao/processaLogout">Sair</a>
