--- a/web/views/empresa/cadastrar.phtml
+++ b/web/views/empresa/cadastrar.phtml
@@ -1,103 +1,63 @@
-<html lang="pt_BR">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mais1Code - Projeto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-4/assets/css/login-4.css">
-    <style>
-        body {
-            background-color: rgb(248, 249, 250) !important;
-        }
-    </style>
-</head>
+<form action="/empresa/processaCadastrar" method="post">
+    <div class="row gy-3 gy-md-4 overflow-hidden">
+        <div class="col-12">
+            <label for="nome" class="form-label">Nome da empresa
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome da Empresa" required>
+        </div>
+        <div class="col-12">
+            <label for="cnpj" class="form-label">CNPJ
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="cnpj" id="cnpj" placeholder="CNPJ" required>
+        </div>
 
-<body>
-<!-- Login 4 - Bootstrap Brain Component -->
-<section class="p-3 p-md-4 p-xl-5">
-    <div class="container">
-        <div class="card border-light-subtle shadow-sm">
-            <div class="row g-0">
-                <div class="col-12 col-md-6">
-                    <img class="img-fluid rounded-start w-100 h-100 object-fit-cover" loading="lazy" src="https://www.smallbusiness.nsw.gov.au/sites/default/files/styles/1280/public/2023-07/iStock-1492719618.jpg?itok=T1vG28Cx" alt="BootstrapBrain Logo">
-                </div>
-                <div class="col-12 col-md-6">
-                    <div class="card-body p-3 p-md-4 p-xl-5">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="mb-5">
-                                    <h3>Nova empresa</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <form action="/empresa/processaCadastrar" method="post">
-                            <div class="row gy-3 gy-md-4 overflow-hidden">
-                                <div class="col-12">
-                                    <label for="nome" class="form-label">Nome da empresa <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome da Empresa" required>
-                                </div>
-                                <div class="col-12">
-                                    <label for="cnpj" class="form-label">CNPJ <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="cnpj" id="cnpj" placeholder="CNPJ" required>
-                                </div>
+        <div class="col-12">
+            <label for="email" class="form-label">Email
+                <span class="text-danger">*</span></label>
+            <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required>
+        </div>
 
-                                <div class="col-12">
-                                    <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required>
-                                </div>
-
-                                <div class="col-12">
-                                    <label for="descricao" class="form-label">Descrição <span class="text-danger">*</span></label>
-                                    <textarea type="text" class="form-control" name="descricao" id="descricao" placeholder="Descrição" required></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <label for="logo" class="form-label">Logo <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="logo" id="logo" placeholder="adicione uma imagem" required>
-                                </div>
-                                <div class="col-12">
-                                    <label for="endereco" class="form-label">Endereço <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="endereco" id="endereco" placeholder="Digite o Endereço Atual" required>
-                                </div>
-                                <hr>
-                                <h6>Dados do usuário</h6>
-                                <div class="col-12">
-                                    <label for="usuarioCpf" class="form-label">CPF <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
-                                </div>
-                                <div class="col-12">
-                                    <label for="usuarioNome" class="form-label">Nome <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuario" required>
-                                </div>
-                                <div class="col-12">
-                                    <label for="usuarioEmail" class="form-label">Email <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuario" required>
-                                </div>
-                                <div class="col-12">
-                                    <label for="usuarioSenha" class="form-label">Senha <span class="text-danger">*</span></label>
-                                    <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required>
-                                </div>
-                                <div class="col-12">
-                                    <div class="d-grid">
-                                        <button class="btn bsb-btn-xl btn-primary" type="submit">Cadastrar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                        <div class="row">
-                            <div class="col-12">
-                                <hr class="mt-5 mb-4 border-secondary-subtle">
-                                <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    Já possui cadastro? <a href="/autenticacao/login" class="link-secondary text-decoration-none">Faça o login</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-12">
+            <label for="descricao" class="form-label">Descrição
+                <span class="text-danger">*</span></label>
+            <textarea type="text" class="form-control" name="descricao" id="descricao" placeholder="Descrição" required></textarea>
+        </div>
+        <div class="col-12">
+            <label for="logo" class="form-label">Logo
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="logo" id="logo" placeholder="adicione uma imagem" required>
+        </div>
+        <div class="col-12">
+            <label for="endereco" class="form-label">Endereço
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="endereco" id="endereco" placeholder="Digite o Endereço Atual" required>
+        </div>
+        <hr>
+        <h6>Dados do usuário</h6>
+        <div class="col-12">
+            <label for="usuarioCpf" class="form-label">CPF
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
+        </div>
+        <div class="col-12">
+            <label for="usuarioNome" class="form-label">Nome
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuario" required>
+        </div>
+        <div class="col-12">
+            <label for="usuarioEmail" class="form-label">Email
+                <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuario" required>
+        </div>
+        <div class="col-12">
+            <label for="usuarioSenha" class="form-label">Senha
+                <span class="text-danger">*</span></label>
+            <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required>
+        </div>
+        <div class="col-12">
+            <div class="d-grid">
+                <button class="btn bsb-btn-xl btn-primary" type="submit">Cadastrar</button>
             </div>
         </div>
     </div>
-</section>
-
-</body>
-</html>
+</form>
