adicionado formulário de cadastro de candidato juntamente a persistencia de dados do mesmo

--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -1,4 +1,4 @@
-<form action="/empresa/processaCadastrar" method="post">
+<form action="/candidato/processaCadastrar" method="post">
     <div class="row gy-3 gy-md-4 overflow-hidden">
         <div class="col-12">
             <label for="nome" class="form-label">Nome Completo
@@ -11,9 +11,9 @@
             <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required>
         </div>
         <div class="col-12">
-            <label for="usuarioSenha" class="form-label">Senha
+            <label for="senha" class="form-label">Senha
                 <span class="text-danger">*</span></label>
-            <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required>
+            <input type="password" class="form-control" name="senha" id="senha" value="" required>
         </div>
         <div class="col-12">
             <label for="habilidades" class="form-label">Habilidades
